--- a/2/catalog.html
+++ b/2/catalog.html
@@ -6,240 +6,222 @@
   <base href="https://htmlacademy-htmlcss.github.io/2049649-device-34/2/">
 </head>
 <body>
-<header class="page-header">
-  <nav class="current-navigation">
-    <a class="visually-hidden" href="index.html">device</a>
-    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
-    <form class="search-form" action='#' method="post">
-      <!--<label for="catalogue-search">Текст поиска</label>-->
-      <input name="search-text" type="text" id='catalogue-search-id' placeholder="Текст поиска">
-      <input name="search" type="submit" id='search-id' value="Найти">
-      <input name="log-on" type="submit" id='log-on-id' value="Войти">
-      <input name="compare" type="submit" id='compare-id' value="Сравнить">
-      <input name="shopping-cart" type="submit" id='shopping-cart-id' value="Корзина">
-    </form>
-    <form>
-      <label for="catalogue-search-button">КАТАЛОГ ТОВАРОВ</label>
-      <input type="button" name="button-search" id='catalogue-search-button' value="Открыть">
-    </form>
-    <ul class="navigation-menu">
-      <li class="delivery-navigation-item">
-        <a class='delivery-navigation-link' href="#">Доставка</a>
-      </li>
-      <li class="warranty-navigation-item">
-        <a class='warranty-navigation-link' href="#">Гарантия</a>
-      </li>
-      <li class="contacts-navigation-item">
-        <a class='contacts-navigation-link' href="#">Контакты</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+  <header class="page-header">
+    <nav class="main-navigation">
+      <a class="navigation-logo" href="index.html">
+        <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+      </a>
+      <form class="search-form" action='#' method="post">
+        <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
+        <input name="search-text" type="text" id='catalogue-search' placeholder="Текст поиска">
+        <input name="search" type="submit" id='search-id' value="Найти">
+      </form>
+      <button name="button log-on" type="button">
+        <span class="log-on-span">Войти</span>
+      </button>
+      <a class="compare" href="#">Сравнить</a>
+      <a class="shopping-cart" href="#">Корзина</a>
 
-<main class="main-inner">
-  <header class="inner-header">
-    <h1 class="inner-header-title">Моноподы для селфи</h1>
-    <ul class="breadcrumbs">
-      <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link" href="index.html">Главная</a>
-      </li>
-      <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link">Каталог товаров</a>
-      </li>
-      <li class="breadcrumbs-item">
-        <a class="breadcrumbs-link">Моноподы для селфи</a>
-      </li>
-    </ul>
+      <button class='button button-search' type="button">
+        <span class="visually-hidden">КАТАЛОГ ТОВАРОВ</span>
+      </button>
+      <ul class="navigation-menu">
+        <li class="navigation-menu-item">
+          <a class='delivery-navigation-link' href="#">Доставка</a>
+        </li>
+        <li class="navigation-menu-item">
+          <a class='warranty-navigation-link' href="#">Гарантия</a>
+        </li>
+        <li class="navigation-menu-item">
+          <a class='contacts-navigation-link' href="#">Контакты</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
-  <section class="catalog-products">
-    <h2 class="visually-hidden">Список товаров с фильтрами</h2>
-  </section>
-  <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-    <fieldset class="catalog-filter-group">
-      <legend class="catalog-filter-title">Цвет</legend>
-      <ul class="catalog-filter-list">
-        <li class="catalog-filter-item">
-      <label class="control">
-        <input class="control-input" type="checkbox" name="color-black" checked>
-
-        Черный
-      </label>
+  <main class="main-inner">
+    <header class="inner-header">
+      <h1 class="inner-header-title">Моноподы для селфи</h1>
+      <ul class="breadcrumbs">
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link" href="index.html">Главная</a>
         </li>
-        <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="checkbox" name="color-white" checked>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link">Каталог товаров</a>
+        </li>
+        <li class="breadcrumbs-item">
+          <a class="breadcrumbs-link">Моноподы для селфи</a>
+        </li>
+      </ul>
+    </header>
+
+    <section class="catalog-products">
+    <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+    <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+      <fieldset class="catalog-filter-group">
+        <legend class="catalog-filter-title">Цвет</legend>
+              <label class="control">
+                <input class="control-input" type="checkbox" name="color-black" checked>
+
+            Черный
+              </label>
+            <label class="control">
+              <input class="control-input" type="checkbox" name="color-white" checked>
 
             Белый
-          </label>
-        </li>
-        <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="checkbox" name="color-blue">
+              </label>
+            <label class="control">
+              <input class="control-input" type="checkbox" name="color-blue">
 
             Синий
-          </label>
-        </li>
-        <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="checkbox" name="color-red">
+              </label>
+            <label class="control">
+              <input class="control-input" type="checkbox" name="color-red">
 
             Красный
-          </label>
-        </li>
-        <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="checkbox" name="color-pink">
+              </label>
+            <label class="control">
+              <input class="control-input" type="checkbox" name="color-pink">
 
             Розовый
-          </label>
-        </li>
-      </ul>
-    </fieldset>
+              </label>
+      </fieldset>
 
-    <fieldset class="catalog-filter-group">
-      <legend class="catalog-filter-title">Bluetooth</legend>
-      <ul class="catalog-filter-list">
-        <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="radio" name="product-group" value="answer-yes" checked>
+      <fieldset class="catalog-filter-group">
+        <legend class="catalog-filter-title">Bluetooth</legend>
+            <label class="control">
+              <input class="control-input" type="radio" name="product-group" value="answer-yes" checked>
 
-            Есть
-          </label>
-        </li>
-        <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="radio" name="product-group" value="answer-no">
+              Есть
+            </label>
 
-            Нет
-          </label>
-        </li>
-      </ul>
-    </fieldset>
+            <label class="control">
+              <input class="control-input" type="radio" name="product-group" value="answer-no">
 
-    <button class="button" type="submit">Показать</button>
-  </form>
+              Нет
+            </label>
+      </fieldset>
 
-  <select class="select-control" aria-label="Сортировка">
-    <option value="popular">Популярное</option>
-    <option value="new-products">Новинки</option>
-    <option value="price">Цена</option>
-  </select>
-  <a href="#" class="button button-light">
-    <span class="visually-hidden">От наилучших</span>
-  </a>
-  <a class="button" href="#">
-    <span class="visually-hidden">От наихудших</span>
-  </a>
+      <button class="button" type="submit">Показать</button>
+    </form>
 
-  <ul class="product-list">
-    <li class="product-card">
-    <a class="product-card-link" href="product.html">
-      <img class="product-card-image" src="#" alt="Любительская селфи-палка">
-      <h3 class="product-card-title">Любительская<br>
-        селфи-палка</h3>
+    <select class="select-control" aria-label="Сортировка">
+      <option value="popular">Популярное</option>
+      <option value="new-products">Новинки</option>
+      <option value="price">Цена</option>
+    </select>
+    <a href="#" class="button button-light">
+      <span class="visually-hidden">От наилучших</span>
     </a>
-    <span class="product-card-price">500 ₽</span>
-    <a class="product-card-button button" href="#">Подробнее</a>
-  </li>
+    <a class="button" href="#">
+      <span class="visually-hidden">От наихудших</span>
+    </a>
 
-    <li class="product-card">
+    <ol class="product-list">
+      <li class="product-card">
       <a class="product-card-link" href="#">
-        <img class="product-card-image" src="#" alt="Профессиональная селфи-палка">
-        <h3 class="product-card-title">Профессиональная селфи-палка</h3>
-      </a>
-      <span class="product-card-price">1 500 ₽</span>
-      <a class="product-card-button button" href="#">Подробнее</a>
-    </li>
-    <li class="product-card">
-      <a class="product-card-link" href="#">
-        <img class="product-card-image" src="#" alt="Непотопляемая селфи-палка">
-        <h3 class="product-card-title">Непотопляемая<br>
+        <img class="product-card-image" src="#" alt="Любительская селфи-палка">
+        <h3 class="product-card-title">Любительская<br>
           селфи-палка</h3>
       </a>
-      <span class="product-card-price">2 500 ₽</span>
+      <span class="product-card-price">500 ₽</span>
       <a class="product-card-button button" href="#">Подробнее</a>
-    </li>
-    <li class="product-card">
-      <a class="product-card-link" href="#">
-        <img class="product-card-image" src="#" alt="Селфи-палка «Следуй за мной»">
-        <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
-      </a>
-      <span class="product-card-price">1 500 ₽</span>
-      <a class="product-card-button button" href="#">Подробнее</a>
-    </li>
-  </ul>
+      </li>
+      <li class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="#" alt="Профессиональная селфи-палка">
+          <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+        </a>
+        <span class="product-card-price">1 500 ₽</span>
+        <a class="product-card-button button" href="#">Подробнее</a>
+      </li>
+      <li class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="#" alt="Непотопляемая селфи-палка">
+          <h3 class="product-card-title">Непотопляемая<br>
+            селфи-палка</h3>
+        </a>
+        <span class="product-card-price">2 500 ₽</span>
+        <a class="product-card-button button" href="#">Подробнее</a>
+      </li>
+      <li class="product-card">
+        <a class="product-card-link" href="#">
+          <img class="product-card-image" src="#" alt="Селфи-палка «Следуй за мной»">
+          <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+        </a>
+        <span class="product-card-price">1 500 ₽</span>
+        <a class="product-card-button button" href="#">Подробнее</a>
+      </li>
+    </ol>
 
-  <ul class="pagination">
-    <li class="pagination-item">
-      <a class="pagination-link pagination-prev pagination-disabled">
-        <span class="visually-hidden">Назад</span>
-      </a>
-    </li>
-    <li class="pagination-item">
-      <a class="pagination-link pagination-current">1</a>
-    </li>
-    <li class="pagination-item">
-      <a class="pagination-link" href="#">2</a>
-    </li>
-    <li class="pagination-item">
-      <a class="pagination-link" href="#">3</a>
-    </li>
-    <li class="pagination-item">
-      <a class="pagination-link" href="#">...</a>
-    </li>
-    <li class="pagination-item">
-      <a class="pagination-link" href="#">15</a>
-    </li>
-    <li class="pagination-item">
-      <a class="pagination-link pagination-next" href="#">
-        <span class="visually-hidden">Вперёд</span>
-      </a>
-    </li>
-  </ul>
-  <button class="button pagination-show-more" type="button">Загрузить еще</button>
-</section>
-
+    <button class="button pagination-show-more" type="button">Загрузить еще</button>
+    <ol class="pagination">
+      <li class="pagination-item">
+        <a class="pagination-link pagination-prev pagination-disabled">
+          <span class="visually-hidden">Назад</span>
+        </a>
+      </li>
+      <li class="pagination-item">
+        <a class="pagination-link pagination-current">1</a>
+      </li>
+      <li class="pagination-item">
+        <a class="pagination-link" href="#">2</a>
+      </li>
+      <li class="pagination-item">
+        <a class="pagination-link" href="#">3</a>
+      </li>
+      <li class="pagination-item">
+        <a class="pagination-link" href="#">...</a>
+      </li>
+      <li class="pagination-item">
+        <a class="pagination-link" href="#">15</a>
+      </li>
+      <li class="pagination-item">
+        <a class="pagination-link pagination-next" href="#">
+          <span class="visually-hidden">Вперёд</span>
+        </a>
+      </li>
+    </ol>
+  </section>
 </main>
 
-<footer class="main-footer">
-  <h2 class="visually-hidden">device</h2>
-  <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
-  <h2 class="visually-hidden">Контакты</h2>
-  <address>
-    <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
-      реки Карповки, 5, литера П.</p>
-    <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-  </address>
-  <ul class="navigation-menu menu-footer">
-    <li class="delivery-navigation-item menu-footer-item">
-      <a class='delivery-navigation-link menu-footer-link' href="#">Доставка</a>
-    </li>
-    <li class="warranty-navigation-item menu-footer-item">
-      <a class='warranty-navigation-link menu-footer-link' href="#">Гарантия</a>
-    </li>
-    <li class="contacts-navigation-item menu-footer-item">
-      <a class='contacts-navigation-link menu-footer-link' href="#">Контакты</a>
-  </ul>
-  <ul class="footer-social-list">
-    <li class="footer-social-item">
-      <a class="button" href="https://t.me/htmlacademy">
-        <span class="visually-hidden">Telegram</span>
-      </a>
-    </li>
-    <li class="footer-social-item">
-      <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-        <span class="visually-hidden">YouTube</span>
-      </a>
-    </li>
-    <li class="footer-social-item">
-      <a class="button" href="https://twitter.com/htmlacademy_ru">
-        <span class="visually-hidden">Twitter</span>
-      </a>
-    </li>
-  </ul>
-  <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
-  <p><small>.html academy</small></p>
-</footer>
+  <footer class="main-footer">
+    <h2 class="visually-hidden">device</h2>
+    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <h2 class="visually-hidden">Контакты</h2>
+    <address>
+      <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
+        реки Карповки, 5, литера П.</p>
+      <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </address>
+    <ul class="navigation-menu menu-footer">
+      <li class="delivery-navigation-item menu-footer-item">
+        <a class='delivery-navigation-link menu-footer-link' href="#">Доставка</a>
+      </li>
+      <li class="warranty-navigation-item menu-footer-item">
+        <a class='warranty-navigation-link menu-footer-link' href="#">Гарантия</a>
+      </li>
+      <li class="contacts-navigation-item menu-footer-item">
+        <a class='contacts-navigation-link menu-footer-link' href="#">Контакты</a>
+    </ul>
+    <ul class="footer-social-list">
+      <li class="footer-social-item">
+        <a class="button" href="https://t.me/htmlacademy">
+          <span class="visually-hidden">Telegram</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually-hidden">YouTube</span>
+        </a>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://twitter.com/htmlacademy_ru">
+          <span class="visually-hidden">Twitter</span>
+        </a>
+      </li>
+    </ul>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+  </footer>
 </body>
 </html>
